--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db4free.net
 DB_PORT=3306
-DB_DATABASE=mansion_wallet
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=mans_wallet
+DB_USERNAME=welith
+DB_PASSWORD=36541888
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
