--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,14 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
+  print-my-name:
+    docker:
+      - image: cimg/base:stable
+    setps:
+      - checkout
+      - run:
+        name: "Print my first name"
+        command: "echo $MY_FIRST_NAME"
   say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -24,3 +32,4 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      - print-my-name
