--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   print-my-name:
     docker:
       - image: cimg/base:stable
-    setps:
+    steps:
       - checkout
       - run:
           name: "Print my first name"
