--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,22 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  print-my-name:
+  save_hello_world_output:
     docker:
       - image: cimg/base:stable
     steps:
-      - checkout
-      - run:
-          name: "Print my first name"
-          command: "echo $CIRCLE_WORKFLOW_ID"
+      - run: echo "hello world" > ~/output.txt #outputs to a file
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+  print_output_file:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
   say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -32,4 +40,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
-      - print-my-name
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
